@@ -49,12 +49,10 @@ class TestInitTerraformDir(unittest.TestCase):
     def test_creates_backend_file_for_backend_type(self):
         # create a new temp dir as the working dir
         with common.create_test_working_dir() as test_working_dir:
-            # get the terraform dir path
-            terraform_dir = os.path.join(
-                test_working_dir, lib.terraform_dir.TERRAFORM_DIR_NAME)
             # get the expected backend file path
             backend_file_path = \
-                os.path.join(terraform_dir, lib.terraform_dir.BACKEND_FILE_NAME)
+                os.path.join(test_working_dir,
+                             lib.terraform_dir.BACKEND_FILE_NAME)
             # set the backend type in the environment
             with common.mocked_env_vars(
                     {lib.terraform_dir.BACKEND_TYPE_VAR: 'local'}):
