@@ -1,3 +1,7 @@
+2019-03-27
+
+- [bugfix] setting TF_BACKEND_TYPE now correctly creates the `backend.tf` file in the `TF_WORKING_DIR` rather than the `TF_DIR_PATH`
+
 2019-03-19
 
 - add terraform version 0.11.13
